[project]
name = "ml-radiomics-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "jupyter>=1.1.1",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.mypy]
ignore_missing_imports = true
